examples/checkpanic/checkpanic.out
# To run this sample, navigate to the directory that contains the
# `.bal` file, and execute the `ballerina run` command.
$ ballerina run checkpanic.bal
120
error: {ballerina/lang.int}NumberParsingError message='string' value 'Invalid' cannot be converted to 'int'
        at ballerina.lang_int:fromString(int.bal:53)
           checkpanic:parse(checkpanic.bal:6)
           checkpanic:main(checkpanic.bal:20)
